--- a/figma.css
+++ b/figma.css
@@ -1,3 +1,29 @@
+:root.dark {
+  --color: white;
+  --bg-color: #2c2c2c;
+  --canvas-bg: #1e1e1e;
+  --border: 1px solid #ffffff12;
+  --boxShadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  --button-bg: #f5f5f5;
+  --button-text: #2c2c2c;
+  --hover-color: #1e1e1e;
+  --panel-bg: #2c2c2c;
+}
+
+/* --- Light Mode ---- */
+
+:root.light {
+  --color: #2c2c2c;
+  --bg-color: #f5f5f5;
+  --canvas-bg: #f8f9fa;
+  --border: 1px solid #d1d5db;
+  --boxShadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  --button-bg: #2c2c2c;
+  --button-text: white;
+  --hover-color: #e5e7eb;
+  --panel-bg: rgb(203, 202, 202);
+}
+
 /* ------- Custom Font ----- */
 
 @font-face {
@@ -13,7 +39,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: aeonik;
-  color: white;
+  color: var(--color);
 }
 
 html,
@@ -34,26 +60,28 @@ body {
 #canvas {
   height: 100%;
   width: 100%;
-  background-color: #1e1e1e;
+  background-color: var(--canvas-bg);
   position: relative;
+  transition: background-color 0.3s ease;
 }
 
 /* ------- Layout Panel ----- */
 
 #layout {
   height: 43%;
-  width: 15%;
+  width: 250px;
   position: absolute;
   right: 2%;
   top: 5%;
-  background-color: #2c2c2c;
-  border: 1px solid #ffffff12;
+  background-color: var(--panel-bg);
+  border: var(--border);
   padding: 10px 20px;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  box-shadow: var(--boxShadow);
   display: flex;
   flex-direction: column;
   gap: 10px;
+  user-select: none;
 }
 
 #layout h2 {
@@ -64,7 +92,7 @@ body {
 /* ------- No Element Selected ----- */
 
 #no-selection {
-  color: #888;
+  color: var(--color);
   font-size: 14px;
   text-align: start;
 }
@@ -109,47 +137,101 @@ input {
 
 /* ------- For toggle down according to element selected ----- */
 
-.hidden{
-    display: none !important; 
+.hidden {
+  display: none !important;
 }
 
 /* ------- Layers Panel ----- */
 
 #layers {
   height: 43%;
-  width: 15%;
+  width: 250px;
   position: absolute;
   right: 2%;
   bottom: 5%;
-  background-color: #2c2c2c;
-  border: 1px solid #ffffff12;
+  user-select: none;
+  background-color: var(--panel-bg);
+  border: var(--border);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  box-shadow: var(--boxShadow);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 #layers h2 {
   font-size: 25px;
   font-weight: 300;
+  margin: 0;
+  padding-bottom: 15px;
+  flex-shrink: 0;
+}
+
+#layers #layers-list {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+}
+
+#layers #layers-list::-webkit-scrollbar {
+  display: none;
+}
+
+#layers-list .layer-item {
+  list-style-type: none;
+  background-color: var(--bg-color);
+  box-shadow: var(--boxShadow);
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.layer-actions {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.li-btn {
+  font-size: 10px;
+  padding: 5px;
+  background-color: transparent;
+  border: 1px solid var(--color);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.active {
+  border-left: 3px solid #4a90e2;
 }
 
 /* ------- Theme Changing ----- */
 
-#theme {
+.theme-toggle {
   position: absolute;
   top: 5%;
   left: 2%;
   height: 40px;
   width: 120px;
-  background-color: #2c2c2c;
+  background-color: var(--panel-bg);
+  border: var(--border);
   border: none;
   border-radius: 10px;
   transition: all ease 0.2s;
   cursor: pointer;
-  box-shadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  box-shadow: var(--boxShadow);
+  user-select: none;
 }
 
-#theme:active {
+.theme-toggle:active {
   scale: 0.97;
 }
 
@@ -158,12 +240,13 @@ input {
 #toolbar {
   height: 60px;
   width: 250px;
-  background-color: #2c2c2c;
+  background-color: var(--panel-bg);
   position: absolute;
   left: 2%;
   bottom: 5%;
+  border: var(--border);
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  box-shadow: var(--boxShadow);
   display: flex;
   gap: 10px;
   padding: 10px;
@@ -181,6 +264,7 @@ input {
   cursor: pointer;
   border-radius: 5px;
   transition: all ease 0.2s;
+  user-select: none;
 }
 
 .toolbar-btn:active {
@@ -190,34 +274,37 @@ input {
 .toolbar-btn .rect {
   height: 100%;
   width: 100%;
-  border: 1px solid white;
+  border: 1px solid var(--color);
   background-color: transparent;
 }
 
 .toolbar-btn .text {
   height: 100%;
   width: 100%;
-  border: 1px solid white;
+  border: 1px solid var(--color);
   background-color: transparent;
 }
 
 .toolbar-btn h2 {
-  color: white;
+  color: var(--color);
   font-weight: 100;
 }
 
 .toolbar-btn:hover {
-  background-color: #1e1e1e;
-  box-shadow: 5px 5px 10px rgba(30, 30, 30, 0.5);
+  background-color: var(--hover-color);
+  box-shadow: var(--boxShadow);
 }
+
+/* elements css (rectangle, Text) */
 
 .editor-element {
   position: absolute;
+  transform-origin: center center;
   box-sizing: border-box;
 }
 
-.editor-element.rectangle{
-  background-color: #D9D9D9;
+.editor-element.rectangle {
+  background-color: var(--color);
 }
 
 .editor-element.text {
@@ -239,4 +326,48 @@ input {
   outline: none;
 }
 
+/* resize handle css */
 
+.resize-handle {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: var(--color);
+  border: 1px solid #4a90e2;
+  box-sizing: border-box;
+}
+
+.resize-handle.nw {
+  top: -4px;
+  left: -4px;
+  cursor: nwse-resize;
+}
+.resize-handle.ne {
+  top: -4px;
+  right: -4px;
+  cursor: nesw-resize;
+}
+.resize-handle.sw {
+  bottom: -4px;
+  left: -4px;
+  cursor: nesw-resize;
+}
+.resize-handle.se {
+  bottom: -4px;
+  right: -4px;
+  cursor: nwse-resize;
+}
+
+/* rotaiton handle css */
+
+.rotation-handle {
+  position: absolute;
+  top: -28px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10px;
+  height: 10px;
+  background: #4a90e2;
+  border-radius: 50%;
+  cursor: grab;
+}
